--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ The idea is that the text is encrypted before being hidden.</p>
 
 <p>Send a e-mail to lampiaosec at riseup dot net.</p>
 
-<p>Or connect to us IRC channel: #lampiaosec in freenode.</p>
+<p>Or connect to us IRC channel: #lampiaosec at freenode.</p>
 
 <p>Look <a href="https://lampiaosec.github.io/contact">https://lampiaosec.github.io/contact</a> for all ways.</p>
 
